# FLAMS

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  rust-toolchain.toml
00clean/ontology/: Cargo.toml
00clean/ontology/src/: languages.rs  lib.rs  rdf.rs
00clean/ontology/src/content/: macros.rs  mod.rs  terms.rs
00clean/ontology/src/narration/: mod.rs
00clean/ontology/src/uris/: archives.rs  base.rs  errors.rs  infix.rs  mod.rs  name.rs  paths.rs  terms.rs
00clean/shtml/extraction/: Cargo.toml
00clean/shtml/extraction/src/: errors.rs  extractor.rs  lib.rs  rules.rs  tags.rs
00clean/shtml/viewer-components/: Cargo.toml
00clean/shtml/viewer-components/src/: config.rs  extractor.rs  lib.rs
00clean/utils/: Cargo.toml
00clean/utils/src/: escaping.rs  gc.rs  inner_arc.rs  lib.rs  parsing.rs  sourcerefs.rs  time.rs  treelike.rs  vecmap.rs
00clean/web-utils/: Cargo.toml
00clean/web-utils/src/: lib.rs  mathml.rs
00clean/web-utils/src/components/: await.rs  binder.css  binder.rs  mod.rs  popover.css  popover.rs
api/: Cargo.toml  build.rs
api/src/: archives.rs  backend.rs  controller.rs  extensions.rs  formats.rs  lib.rs  main.rs  source_files.rs  uris.rs
api/src/backend/: archive_manager.rs  archives.rs  manager.rs  mod.rs  relational.rs
api/src/building/: buildqueue.rs  queue.rs  targets.rs  tasks.rs
api/src/checking/: mod.rs
api/src/formats/: building.rs
api/src/narration/: document.rs
api/src/ontology/: rdf.rs
api/src/utils/: asyncs.rs  circular_buffer.rs  iter.rs  parsing.rs  problems.rs  settings.rs  sourcerefs.rs
controller/: Cargo.toml
controller/src/: lib.rs  logging.rs
core/: Cargo.toml
core/src/: lib.rs  uris.rs  utils.rs
core/src/building/: buildstate.rs  formats.rs
core/src/content/: constants.rs  module.rs  notations.rs  terms.rs
core/src/narration/: document.rs
core/src/ontology/: archives.rs  rdf.rs
core/src/uris/: archives.rs  base.rs  documents.rs  mod.rs  modules.rs  symbols.rs
core/src/utils/: asyncs.rs  filetree.rs  ignore_regex.rs  logs.rs  mod.rs  parse.rs  settings.rs  sourcerefs.rs  time.rs
experiments/: Cargo.toml
experiments/src/: lib.rs  main.rs  search.rs
ftml-viewer/: Cargo.toml  Makefile.toml  demo.html  inline-package.json
ftml-viewer/.cargo/: config.toml
ftml-viewer/.zed/: settings.json
ftml-viewer/src/: lib.rs  ts.rs
main/: Cargo.toml
main/src/: cli.rs  lib.rs  main.rs  settings.rs
shtml/: Cargo.toml
shtml/src/: docs.rs  lib.rs  parse.rs  test.rs
shtml/src/parsing/: mod.rs  parser.rs  shtml.rs
source/database/: Cargo.toml
source/database/src/: db.rs  lib.rs
source/ffi/: Cargo.toml  README.md
source/ffi/src/: lib.rs
source/git/: Cargo.toml
source/git/src/: lib.rs  repos.rs
source/git/src/gl/: auth.rs  mod.rs
source/lsp/: Cargo.toml
source/lsp/src/: annotations.rs  capabilities.rs  documents.rs  implementation.rs  lib.rs  state.rs  stex_default.txt  ws.rs
source/main/: Cargo.toml
source/main/src/: endpoints.rs  lib.rs  main.rs  users.rs
source/main/src/router/: backend.rs  buildqueue.rs  components.rs  dashboard.rs  filecards.css  git.rs  index.rs  logging.rs  logs.css  mod.rs  query.rs  repo-table.css  search.rs  select_queue.css  settings.rs  users.rs
source/main/src/server/: db.rs  files.rs  gl.rs  img.rs  lsp.rs  mod.rs  settings.rs
source/main/src/utils/: mod.rs  ws.rs
source/ontology/: Cargo.toml
source/ontology/src/: archive_json.rs  file_states.rs  ftml.rs  languages.rs  lib.rs  rdf.rs  search.rs  shtml.rs
source/ontology/src/content/: checking.rs  macros.rs  mod.rs  modules.rs  terms.rs
source/ontology/src/narration/: checking.rs  documents.rs  exercises.rs  mod.rs  notations.rs  paragraphs.rs  problems.rs  sections.rs  variables.rs
source/ontology/src/uris/: archives.rs  base.rs  errors.rs  infix.rs  mod.rs  name.rs  paths.rs  terms.rs
source/stex/: Cargo.toml
source/stex/src/: dependencies.rs  latex.rs  lib.rs  rustex.rs
source/stex/src/quickparse/: mod.rs  tokenizer.rs  tokens.rs
source/system/: Cargo.toml
source/system/src/: formats.rs  lib.rs  logging.rs  search.rs  settings.rs
source/system/src/backend/: cache.rs  docfile.rs  gitignore_template.txt  mod.rs  rdf.rs
source/system/src/building/: buildtool.rs  mod.rs  queue.rs  queue_manager.rs  queueing.rs  tests.rs
source/utils/: Cargo.toml
source/utils/src/: binary.rs  change_listener.rs  escaping.rs  file_id.rs  gc.rs  globals.rs  id_counters.rs  inner_arc.rs  lib.rs  logs.rs  parsing.rs  regex.rs  settings.rs  sourcerefs.rs  time.rs  treelike.rs  vecmap.rs
source/web-utils/: Cargo.toml
source/web-utils/src/: lib.rs  mathml.rs
source/web-utils/src/components/: anchor.css  anchors.rs  await.rs  binder.rs  block.css  block.rs  burger.css  drawer.css  drawer.rs  errors.rs  mod.rs  popover.css  popover.rs  spinner.css  spinner.rs  theming.rs  trees.css  trees.rs
stex/: Cargo.toml
stex/src/: dependencies.rs  lib.rs  quickparse.rs  rustex.rs  tasks.rs  test.rs
stex/src/quickparse/: latex.rs  tokenizer.rs  tokens.rs
stex/src/quickparse/latex/: rules.rs
stex/src/utils/: mod.rs
system/: Cargo.toml
system/src/: backend.rs  buildqueue.rs  controller.rs  formats.rs  lib.rs  settings.rs
system/src/backend/: archive_manager.rs  archives.rs
system/src/ontology/: relational.rs
system/src/test/: cozo.rs  indradb.rs  oxigraph.rs  surrealdb.rs
system/src/utils/: parse.rs  problems.rs  progress.rs
test-plugin/: Cargo.toml
test-plugin/src/: lib.rs
tests/: Cargo.toml
tests/benches/: archives.rs  mutex.rs  plugins.rs
tests/src/: lib.rs  main.rs
ui/: Cargo.toml
ui/src/: lib.rs  main.rs  ui.rs  utils.rs
ui/src/components/: buildqueue.rs  library.rs  log.rs  progress.rs  settings.rs
ui/src/components/log/: layer.rs
web/graphs/: Cargo.toml  index.html
web/graphs/.cargo/: config.toml
web/graphs/assets/: manifest.json
web/graphs/src/: app.rs  graphs.rs  lib.rs  main.rs
web/main/: Cargo.toml  build.rs
web/main/assets/: shtml.js
web/main/src/: home.rs  lib.rs  main.rs  test.rs
web/main/style/: main.scss
(+337 files in other folders)
