[package]
name = "immt-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
rstest = "0.21.0"
tracing-subscriber = "0.3"

[features]
rayon = ["dep:rayon","dep:spliter"]
serde = ["immt-core/serde","dep:serde","dep:bincode"]
async = ["immt-core/async","dep:futures"]
tokio = ["dep:tokio","async"]
oxigraph = ["dep:oxigraph"]

[dependencies]
immt-core = {path="../core"}
simple-home-dir = "0.3"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"], optional = true }
bincode = { version="2.0.0-rc.3",features = ["derive","serde"],optional=true }
tracing = "0.1"
rayon = { version="1.10",optional = true }
spliter = {version="0.1",optional = true}
tokio = { version = "1", features = ["fs","io-util","sync","test-util","macros","rt"], optional = true }
futures = {version = "0.3", optional = true }
paste = "1.0"
#async-generic = "1.0"
#cfg-if = "1.0"
#cglue = "0.2"
#stabby = "4.0"
async-broadcast = "0.7"
parking_lot = "0.12"
oxigraph = { version = "0.4.0-alpha.7", optional = true }