[package]
name = "immt-api"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
rstest = "0.21.0"
tracing-subscriber = "0.3"

[lints]
workspace = true

[features]
oxigraph = ["dep:oxigraph"]

[dependencies]
immt-core = {workspace=true,features=["serde","async","rayon"]}

rustc-hash = "2"
simple-home-dir = "0.3"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
bincode = { version="2.0.0-rc.3",features = ["derive","serde"] }
tracing = "0.1"
rayon = "1"
spliter = {version="0.1"}
tokio = { version = "1", features = ["fs","io-util","sync","test-util","macros","rt"] }
futures = {version = "0.3" }
paste = "1.0"
async-trait = "0.1"
#async-generic = "1.0"
#cfg-if = "1.0"
#cglue = "0.2"
#stabby = "4.0"
async-broadcast = "0.7"
parking_lot = "0.12"
walkdir = "2.5"
oxigraph = { version = "0.4.0-alpha.7", optional = true }
spargebra = "0.3.0-alpha.5"
oxrdfio = { version = "0.1.0-alpha.6", features = ["async-tokio"] }