[package]
name = "immt-controller"
version = "0.0.1"
edition = "2021"

[lints]
workspace = true

[dependencies]

# Utils
chrono = "0.4"
parking_lot = "0.12"
rayon = "1.10"
serde = { version="1", features=["derive"] }
serde_json = "1"
md5 = "0.7"
tokio = "1.38"
lazy_static = "1.4"

# iMMT
immt-api = { workspace=true,features=["oxigraph"] }
immt-core = { workspace=true,features=["serde"] }
immt-shtml = { workspace=true }
immt-stex = {workspace=true }

# Logging
tracing = "0.1"
tracing-subscriber = { version="0.3",features = ["smallvec","parking_lot","json"] }
tracing-appender = "0.2"
simple-home-dir = "0.3"

# extensions
libloading = "0.8"