[package]
name = "immt-core"
version = "0.0.1"
authors = ["Dennis Müller <d.mueller@kwarc.info>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """

"""
edition = "2021"

[lints]
workspace = true

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[features]
serde = ["dep:serde","url/serde","arrayvec/serde","dep:bincode"]
async = ["dep:tokio"]

[dev-dependencies]
rstest = "0.21.0"
tracing-subscriber = "0.3"

[dependencies]
oxrdf = "0.2.0-alpha.5"
url = { version="2.5" }
triomphe = "0.1"
regex = "1.10"
paste = "1"
tracing = "0.1"
md5 = "0.7"
chrono = "0.4"

arrayvec = "0.7"

tokio = { version="1.38", features = ["full"], optional=true }


# serialization
serde = { version = "1", features = ["derive"],optional = true }
bincode = { version="2.0.0-rc.3",features = ["derive","serde"],optional=true }
