[package]
name = "immt"
version = "0.0.1"
authors = ["Dennis Müller <d.mueller@kwarc.info>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = """

"""
edition = "2021"

[profile.release]
opt-level = 2
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"


[dev-dependencies]

[dependencies]
immt-api = {path = "../api",features=["bincode","fs","pariter","tokio"]}
immt-system = {path = "../system"}
immt-stex = {path = "../stex"}
immt-ui = {path = "../ui"}
rayon = "1.8"
tracing = "0.1"
tracing-subscriber = { version="0.3",features = ["smallvec","parking_lot","json"] }
tracing-appender = "0.2"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }


walkdir = "2.4"
oxigraph = "0.4.0-alpha.3"

#reedline-repl-rs = "1.0.7"
#indicatif = "0.17.7"
#tracing-indicatif = "0.3.6"

#ratatui = { version = "0.26", features = ["crossterm","all-widgets"] }
#crossterm = "0.27"
#tui-logger = { version = "0.11.0", features = ["tracing-support","crossterm"] }

# https://blog.logrocket.com/rust-and-tui-building-a-command-line-interface-in-rust/
# https://github.com/sayanarijit/tui-input/tree/main
# https://github.com/ratatui-org/ratatui/tree/main/examples
# https://www.monkeypatch.io/blog/2021-05-31-rust-tui
# https://dev.to/protium/creating-a-text-based-ui-with-rust-420
# https://crates.io/crates/fuzzy-matcher/