[package]
name = "immt"
version = "0.1.0"
edition = "2021"
description = "iMᴍᴛ - Generic knowledge management system for flexiformal knowledge"

[dev-dependencies]
rstest = "0.21"
tracing-subscriber = "0.3"

[lints]
workspace = true

[features]
async = ["immt-web/async","immt-controller/async"]
accounts = ["async","immt-web/accounts"]

[dependencies]

# Utils
tokio = { version="1.38",features = ["full","rt"] }
parking_lot = "0.12"
rayon = "1.10"
clap = { version="4.5",features=["derive"] }
dotenv = "0.15"

# backtrace-on-stack-overflow = "0.3"

# remove:
#walkdir = "2.5"
#oxigraph = "0.4.0-alpha.7"

# iMMT
immt-api = { path="../api",features=["rayon","serde","tokio","oxigraph"] }
immt-core = { path="../core",features=["serde","async"] }
immt-stex = { path="../stex" }
immt-controller = { path="../controller" }
immt-web = { path= "../web/main", features=["server"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version="0.3",features = ["smallvec","parking_lot","json"] }
tracing-appender = "0.2"
simple-home-dir = "0.3"


